# searchengine

crawler/: docker-compose.yml  go.mod  go.sum  main.go  tui.go
crawler/parser/: html.go  links.go
crawler/structs/: stats.go  urlqueue.go
webcrawler/: .gitignore  Cargo.toml
webcrawler-old/: Cargo.toml
webcrawler-old/src/: http_client.rs  parser.rs  writer.rs
webcrawler/src/: http_client.rs  main.rs  parser.rs  rate_limiter.rs  ui.rs  url_store.rs  writer.rs
