[package]
name = "webcrawler"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
futures = "0.3.31"
lol_html = "2.7.0"
num_cpus = "1.17.0"
ratatui = "0.30.0"
reqwest = "0.12.24"
rocksdb = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.18"
url = "2.5.7"
